[package]
name = "merge-sort"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
flume = "0.12.0"
pollster = "0.4.0"
rand = "0.9.1"
wgpu = "27.0.1"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
